ajout du rapport, du MCD, image fond d'ecran du login